# vose

./: .gitignore  MANIFEST.in  README.md  benchmarks.ipynb  build.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish.yml  test.yml  wheels.yml
vose/: __init__.pxd  random_wrapper.pxd  sampler.pxd  sampler.pyx
