[tool.poetry]
name = "vose"
version = "0.1.1"
description = "Cython implementation of Vose's Alias method."
authors = ["Max Halford <maxhalford25@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MaxHalford/vose"
packages = [{ include = "vose" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "*"

[tool.poetry.extras]
dev = ["pytest", "scipy"]

[build-system]
requires = ["poetry-core", "setuptools", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
