[project]
name = "vose"
version = "0.2.1"
description = "Cython implementation of Vose's Alias method."
authors = [{ name = "Max Halford", email = "maxhalford25@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/MaxHalford/vose"

[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
default-groups = "all"

[tool.setuptools]
packages = ["vose"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "scipy>=1.16.3",
]
